--- a/style.css
+++ b/style.css
@@ -10,6 +10,26 @@ Version:        0.1.0
 
 @import url("../twentyeleven/style.css");
 
+/* Search form in nav bar */
+#branding .nav-search {
+    float: right;
+}
+#branding .nav-search #searchform {
+    position: relative;
+    right: 0;
+    top: 0;
+    margin-top: 5px;
+}
+#branding .nav-search #s {
+    width: 120px;
+    background-color: #f9f9f9;
+}
+@media (max-width: 800px) {
+    #branding .nav-search {
+        display: none;
+    }
+}
+
 /* Twitter widget styling */
 .widget_twitter .widget-title {
   float: left;
