--- a/style.css
+++ b/style.css
@@ -10,38 +10,63 @@ Version:        0.1.0
 
 @import url("../twentyeleven/style.css");
 
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600");
-@import url("http://fonts.googleapis.com/css?family=Oswald:400,700");
+@import url("http://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans:400,400italic,600,600italic");
 
 
 /* Typography etc. */
+body {
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+#branding {
+    background-color: #363636;
+}
 #site-title {
+    font-style: italic;
     letter-spacing: 0.1em;
+    color: #fff;
+}
+#site-title a,
+#site-title a:hover {
+    color: #fff !important;
 }
 #site-description {
-    font-family: Georgia,"Times New Roman",Times,serif;
+    font-size: 1.2em;
     font-style: italic;
+    color: #aaa;
+}
+#access {
+    /*background: linear-gradient(#5a5a5a, #6b6b6b) repeat scroll 0 0 transparent;*/
+    background: #666; /* Show a solid color for older browsers */
+	background: -moz-linear-gradient(#5a5a5a, #6b6b6b);
+	background: -o-linear-gradient(#5a5a5a, #6b6b6b);
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5a5a5a), to(#6b6b6b)); /* older webkit syntax */
+	background: -webkit-linear-gradient(#5a5a5a, #6b6b6b);
+}
+#access li:hover > a,
+#access a:focus {
+	background: none;
+	color: #fff;
+    text-shadow: 0 0 0.05em #eee;
 }
 
 .entry-title {
-    font-family: "Oswald",Impact,sans-serif;
+    font-family: "Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-style: normal;
     font-weight: normal;
-    letter-spacing: 0.1em;
 }
 
 .widget-title,
 #reply-title {
     color: #373737;
-    font-family: "Oswald",Impact,sans-serif;
-    font-size: 15px;
+    font-family: "Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 1.4em;
     font-weight: normal;
-    letter-spacing: 0.1em;
+    letter-spacing: normal;
     line-height: 2.6em;
     text-transform: none;
 }
 #reply-title {
-    font-size: 24px;
+    font-size: 1.6em;
 }
 
 a,
@@ -55,8 +80,28 @@ a:hover,
     text-decoration: none;
 }
 
+.widget-area,
+.widget ul li,
+#access ul,
+.entry-meta,
+#respond .comment-notes, #respond .logged-in-as,
+#respond p {
+    font-size: 1em;
+}
+
 .widget ul {
     margin-left: 20px;
+}
+
+@media (max-width: 800px) {
+    #main #primary {
+        background-color: #fff;
+    }
+    #main #secondary {
+        background-color: #ddd;
+        margin: 0;
+        padding: 20px 7.6%;
+    }
 }
 
 
@@ -78,7 +123,7 @@ ul.entry-meta-list .post-time {
     display: inline;
     padding: 1px 6px 2px;
     border-radius: 4px 4px 4px 4px;
-    background-color: #333;
+    background-color: #363636;
     color: #fff;
     font-weight: bold;
     text-align: center;
@@ -108,7 +153,7 @@ ul.entry-meta-list .post-time a {
     article header.entry-header .entry-meta ul.entry-meta-list li {
         clear: both;
         float: none;
-        margin: 3px 0;
+        margin: 10px 0;
         padding-right: 5px;
     }
     ul.entry-meta-list .post-time {
@@ -118,7 +163,6 @@ ul.entry-meta-list .post-time a {
         padding: 8px;
         border-radius: 25px 25px 25px 25px;
         font-size: 17px;
-        font-family: Georgia,"Times New Roman",Times,serif;
         font-weight: normal;
         font-style: italic;
     }
@@ -152,7 +196,7 @@ footer #s {
     position: relative;
     right: 0;
     top: 0;
-    margin-top: 5px;
+    margin-top: 9px;
 }
 #branding .nav-search #s {
     width: 120px;
