--- a/style.css
+++ b/style.css
@@ -213,30 +213,23 @@ ul.entry-meta-list .post-time a {
     color: #999;
 }
 @media (min-width: 800px) {
-    #content {
-        margin-left: 17.2%;
-        margin: 0 30% 0 17.6%;
-        width: 52.4%;
-    }
-    article header.entry-header {
-        position: relative;
-    }
     article header.entry-header .entry-meta {
-        position: absolute;
-        top: 10px;
-        left: -160px;
-        width: 150px;
+        position: relative;
         padding-right: 0;
-        text-align: right;
     }
     article header.entry-header .entry-meta ul.entry-meta-list li {
-        clear: both;
         float: none;
-        margin: 15px 0;
-        padding-right: 5px;
+        margin: 1px 5px;
+        padding-left: 70px;
+    }
+    article header.entry-header .entry-meta ul.entry-meta-list li:first-child {
+        position: absolute;
+        top: 5px;
+        left: 0;
+        padding-left: 0;
     }
     ul.entry-meta-list .post-time {
-        float: right;
+        float: left;
         width: 38px;
         height: 38px;
         padding: 6px;
@@ -252,9 +245,6 @@ ul.entry-meta-list .post-time a {
     }
     ul.entry-meta-list .post-time .entry-date-month {
         font-size: 15px;
-        display: block;
-    }
-    ul.entry-meta-list .tag-links .tag-link {
         display: block;
     }
 }
